--- a/practica-2/css/theme/variables.css
+++ b/practica-2/css/theme/variables.css
@@ -1,6 +1,6 @@
 /* Variables CSS y Breakpoints */
 :root {
-  --color-primary: #b91c8c;
+  --color-primary: #000;
   --color-secondary: #fff;
   --color-text: #333;
   --color-text-light: #fff;
