--- a/practica-2/css/modules/video.css
+++ b/practica-2/css/modules/video.css
@@ -50,6 +50,31 @@
   z-index: 2;
 }
 
+.video__bg {
+  width: 100%;
+  height: 120%;
+  object-fit: cover;
+  transform: scale(1.05);
+  will-change: transform;
+  transition: transform 0.1s ease-out;
+}
+
+.video__bg:hover {
+  animation: videoFloat 10s ease-in-out infinite;
+}
+
+@keyframes videoFloat {
+  0%, 100% { 
+    transform: scale(1.05) translateY(0px);
+  }
+  33% { 
+    transform: scale(1.1) translateY(-15px);
+  }
+  66% { 
+    transform: scale(1.08) translateY(-25px);
+  }
+}
+
 .video__placeholder {
   width: 100%;
   height: 120%;
