--- a/web-res/css/style.css
+++ b/web-res/css/style.css
@@ -11,13 +11,13 @@ html, body {
     grid-template-columns: repeat(4, 1fr);
 
     grid-template-rows: repeat(18, 1fr); 
-    gap: 10px; 
+    gap: 1vh; 
  
     width: 100%; 
     /* ocupa toda la altura del cuerpo */
     height: 100vh; 
     box-sizing: border-box; 
-    padding: 10px; 
+    padding: 1vh; 
     background-color: #f0f0f0; 
 }
 
@@ -27,7 +27,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    font-size: 3em;
     font-weight: bold;
 }
 
