--- a/web-res/css/style.css
+++ b/web-res/css/style.css
@@ -188,3 +188,106 @@ header h1 {
     grid-row: 16 / span 3; 
 }
 
+/*
+ * MEDIA QUERY PARA TABLETS
+*/
+@media (min-width: 31vh) and (max-width: 130vh) {
+
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(30, 1fr);
+        gap: 1.5vh;
+        height: auto; 
+    }
+
+    .item-1 {
+        grid-column: 1 / span 2;
+        grid-row: 1 / span 6;
+    }
+    .item-2 {
+        grid-column: 3 / span 1;
+        grid-row: 1 / span 3;
+    }
+    .item-3 {
+        grid-column: 3 / span 1;
+        grid-row: 4 / span 3;
+    }
+
+    .item-4 {
+        grid-column: 1 / span 1;
+        grid-row: 7 / span 3;
+    }
+    .item-5 {
+        grid-column: 1 / span 1;
+        grid-row: 10 / span 3;
+    }
+    .item-6 {
+        grid-column: 2 / span 2;
+        grid-row: 7 / span 6;
+    }
+        
+    .item-7 {
+        grid-column: 1 / span 2;
+        grid-row: 13 / span 6;
+    }
+    .item-8 {
+        grid-column: 3 / span 1;
+        grid-row: 13 / span 3;
+    }
+    .item-9 {
+        grid-column: 3 / span 1;
+        grid-row: 16 / span 3;
+    }
+
+
+    .item-10 {
+        grid-column: 2 / span 2; 
+        grid-row: 19 / span 6;
+    }
+
+      .item-11 {
+        grid-column: 1 / span 1;
+        grid-row: 19 / span 3;
+    }
+    .item-12 {
+        grid-column: 1 / span 1; 
+        grid-row: 22 / span 3; 
+    }
+    .item-13 { 
+        grid-column: 1 / span 2; 
+        grid-row: 25 / span 6; 
+    }
+    
+ 
+  
+    .item-14 { 
+        grid-column: 3 / span 1; 
+        grid-row: 25 / span 3; 
+    }
+    .item-15 { 
+        grid-column: 3 / span 1; 
+        grid-row: 28 / span 3; 
+    }
+}
+
+/*
+ * MEDIA QUERY PARA MOVILES
+*/
+@media (max-width: 75vh) {
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto; 
+        gap: 1.5vh;
+        height: auto; 
+    }
+
+
+    .grid-item {
+        grid-column: 1 / span 1; 
+        grid-row: auto; 
+        min-height: 15vh;
+    }
+
+
+}
+
